--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
             "src":"./index.js",
             "use":"@vercel/node"
         }
+    ],
+    "routes":[
+        {
+            "src":"/(.*)",
+            "dest":"/"
+        }
     ]
-   
 }
